--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "bayer_dither_postprocessing",
-  "version": "1.0",
-  "description": "A bayer dithering and ordered dithering effect for threeJS postprocessing",
-  "main": "index.js",
-  "author": "Chase Jackson",
-  "license": "MIT",
-  "dependencies": {
-    "@react-three/postprocessing": "^2.15.0",
-    "@types/three": "^0.154.0",
-    "three": "^0.154.0",
-    "typescript": "^5.1.6"
-  }
+	"name": "ordered_dither_gpu_r3f",
+	"version": "1.0",
+	"description": "An ordered and bayer dithering effect for React ThreeJS postprocessing. GPU based webgl/glsl.",
+	"main": "index.js",
+	"author": "Chase Jackson",
+	"license": "MIT",
+	"dependencies": {
+		"@react-three/postprocessing": "^2.15.0",
+		"@types/three": "^0.155.0",
+		"three": "^0.155.0",
+		"typescript": "^5.1.6"
+	}
 }
